--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,256 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <title>Mesto</title>
   </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+  <body class="root">
+    <div class="page">
+      <header class="header page__cover">
+        <img
+          class="logo"
+          src="<%=require('./images/Vector.svg')%>"
+          alt="Логотип сайта"
+        />
+      </header>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+      <main class="content page__cover">
+        <section class="profiles page__cover">
+          <div class="profile">
+            <div class="profile__info">
+              <div class="profile__data">
+                <div class="profile__change-avatar">
+                  <img
+                    class="profile__avatar"
+                    src="<%=require('./images/image.jpg')%>"
+                    alt="Фото пользователя"
+                  />
+                  <button
+                    class="profile__opened-avatar"
+                    type="button"
+                    aria-label="Редактировать аватар"
+                  ></button>
+                </div>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+                <div class="profile__item">
+                  <div class="profile__item-name">
+                    <h1 class="profile__item-info"></h1>
+                    <button
+                      class="profile__opened"
+                      type="button"
+                      aria-label="Редактировать"
+                    ></button>
+                  </div>
+                  <p class="profile__specialization"></p>
+                </div>
+              </div>
+              <button
+                class="profile__button"
+                type="button"
+                aria-label="Добавить"
+              ></button>
+            </div>
+          </div>
+        </section>
+
+        <template id="template-element">
+          <li class="element">
+            <button
+              class="element__trash"
+              type="button"
+              aria-label="Удалить"
+            ></button>
+            <img class="element__img" />
+            <div class="element__title">
+              <h2 class="element__name-mesto"></h2>
+              <div class="element__counting-likes">
+                <button
+                  class="element__like"
+                  type="button"
+                  aria-label="Поставить лайк"
+                ></button>
+                <span class="element__number-likes">0</span>
+              </div>
+            </div>
+          </li>
+        </template>
+
+        <section>
+          <ul class="elements"></ul>
+        </section>
+      </main>
+
+      <footer class="footer page__cover">
+        <p class="footer__text">&copy; 2020 Mesto Russia</p>
+      </footer>
+
+      <div class="popup" id="popup_form_profile">
+        <div class="popup__container">
+          <form
+            class="popup__form popup__form_type_profile"
+            id="form_profile"
+            name="formProfile"
+            novalidate
+          >
+            <button
+              class="popup__close"
+              type="button"
+              aria-label="Кнопка закрытия формы"
+            ></button>
+            <fieldset class="popup__data">
+              <legend class="popup__title">Редактировать профиль</legend>
+              <input
+                class="popup__input popup__input_value_name"
+                id="name-user"
+                minlength="2"
+                maxlength="40"
+                placeholder="Введите ФИО"
+                type="text"
+                name="name"
+                required
+              />
+              <span class="popup__input-error name-user-error"></span>
+              <input
+                class="popup__input popup__input_value_job"
+                id="about-input"
+                minlength="2"
+                maxlength="200"
+                placeholder="Введите специализацию"
+                type="text"
+                name="about"
+                required
+              />
+              <span class="popup__input-error about-input-error"></span>
+            </fieldset>
+            <button type="submit" class="popup__button" aria-label="Сохранить">
+              Сохранить
+            </button>
+          </form>
+        </div>
+      </div>
+
+      <div class="popup" id="popup_form_mesto">
+        <div class="popup__container">
+          <form
+            class="popup__form popup__form_type_profile"
+            id="form_mesto"
+            name="formMesto"
+            novalidate
+          >
+            <button
+              class="popup__close"
+              type="button"
+              aria-label="Кнопка закрытия формы"
+            ></button>
+            <fieldset class="popup__data">
+              <legend class="popup__title">Новое место</legend>
+              <input
+                class="popup__input popup__input_value_mesto"
+                id="name-input"
+                minlength="2"
+                maxlength="30"
+                placeholder="Название"
+                type="text"
+                name="name"
+                required
+              />
+              <span class="popup__input-error name-input-error"></span>
+              <input
+                class="popup__input popup__input_value_link"
+                id="link-input"
+                placeholder="Ссылка на картинку"
+                type="url"
+                name="link"
+                required
+              />
+              <span class="popup__input-error link-input-error"></span>
+            </fieldset>
+            <button
+              type="submit"
+              class="popup__button"
+              aria-label="Создать"
+              disabled
+            >
+              Создать
+            </button>
+          </form>
+        </div>
+      </div>
+
+      <div class="popup" id="popup_foto_mesto">
+        <div class="popup__container-foto">
+          <figure class="popup__foto">
+            <button
+              class="popup__close"
+              type="button"
+              aria-label="Кнопка закрытия формы"
+            ></button>
+            <img class="popup__img" src="#" alt="#" />
+            <figcaption class="popup__img-name"></figcaption>
+          </figure>
+        </div>
+      </div>
+      <div class="popup" id="popup_form_avatar">
+        <div class="popup__container">
+          <form
+            class="popup__form popup__form_type_avatar"
+            id="form_avatar"
+            name="formAvatar"
+            novalidate
+          >
+            <button
+              class="popup__close"
+              type="button"
+              aria-label="Кнопка закрытия формы аватар"
+            ></button>
+            <fieldset class="popup__data">
+              <legend class="popup__title">Обновить аватар</legend>
+              <input
+                class="popup__input popup__input_value_avatar"
+                id="avatar-input"
+                placeholder="Ссылка на новый аватар"
+                type="url"
+                name="avatar"
+                required
+              />
+              <span class="popup__input-error avatar-input-error"></span>
+            </fieldset>
+            <button
+              type="submit"
+              class="popup__button"
+              aria-label="Сохранить"
+              disabled
+            >
+              Сохранить
+            </button>
+          </form>
+        </div>
+      </div>
+      <div class="popup" id="popup_delete_card">
+        <div class="popup__container">
+          <form
+            class="popup__form popup__form_type_delete-card"
+            id="form_delete_card"
+            name="formDeleteCard"
+            novalidate
+          >
+            <button
+              class="popup__close"
+              type="button"
+              aria-label="Кнопка закрытия формы"
+            ></button>
+            <fieldset class="popup__data">
+              <legend class="popup__title">Вы уверены?</legend>
+            </fieldset>
+            <button type="submit" class="popup__button" aria-label="Да">
+              Да
+            </button>
+          </form>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
