--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,7 @@
 
     <title>Mesto</title>
   </head>
-  <body class="root" id="root"></body>
+  <body class="root">
+    <div id="root"></div>
+  </body>
 </html>
