--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 
     <title>Mesto</title>
   </head>
-  <body class="root">
-    <div id="root"></div>
+  <body>
+    <div class="root" id="root"></div>
   </body>
 </html>
